package design_pattern.factory_method.adapter.v1;

/**
 * @author zc.zhou
 * @Description
 * @create 2024-08-28 18:04
 */
public class Adaptee {
  //特殊请求
  public void specificRequest() {
    System.out.println("特殊请求");
  }
}
