package design_pattern.factory_method.adapter.v1;

/**
 * @author zc.zhou
 * @Description
 * @create 2024-08-28 18:00
 */
public class Target {
  public void request() {
    System.out.println("普通请求！");
  }
}
